--- a/Week01/class/console.ipynb
+++ b/Week01/class/console.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -11,17 +11,126 @@
    },
    "outputs": [],
    "source": [
-    "# Create an interface to search through syslog files."
+    "# Create an interface to search through syslog files.\n",
+    "import re"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "outputs": [],
+   "source": [
+    "#Open a file\n",
+    "with open(\"../../logs/smallSyslog.log\") as f:\n",
+    "\n",
+    "    # read in the file\n",
+    "    contents = f.readlines()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Jun 15 02:04:59 combo sshd(pam_unix)[20897]: authentication failure; logname= uid=0 euid=0 tty=NODEVssh ruser= rhost=220-135-151-1.hinet-ip.hinet.net  user=root\\n', 'Jun 15 02:04:59 combo sshd(pam_unix)[20898]: authentication failure; logname= uid=0 euid=0 tty=NODEVssh ruser= rhost=220-135-151-1.hinet-ip.hinet.net  user=root\\n', 'Jun 15 04:06:18 combo su(pam_unix)[21416]: session opened for user cyrus by (uid=0)\\n', 'Jun 15 04:06:19 combo su(pam_unix)[21416]: session closed for user cyrus\\n', 'Jun 15 04:06:20 combo logrotate: ALERT exited abnormally with [1]\\n', 'Jun 15 04:12:42 combo su(pam_unix)[22644]: session opened for user news by (uid=0)\\n', 'Jun 15 04:12:43 combo su(pam_unix)[22644]: session closed for user news\\n', 'Jun 15 12:12:34 combo sshd(pam_unix)[23397]: check pass; user unknown\\n', 'Jun 15 12:12:34 combo sshd(pam_unix)[23397]: authentication failure; logname= uid=0 euid=0 tty=NODEVssh ruser= rhost=218.188.2.4 ']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(contents)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "outputs": [],
+   "source": [
+    "keywords = ['sshd\\(pam_unix\\)\\[[0-9]{3,8}\\]: authentication failure', 'session opened for user.*', 'exited abnormally']"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['sshd(pam_unix)[20897]: authentication failure']\n",
+      "[]\n",
+      "[]\n",
+      "['sshd(pam_unix)[20898]: authentication failure']\n",
+      "[]\n",
+      "[]\n",
+      "[]\n",
+      "['session opened for user cyrus by (uid=0)']\n",
+      "[]\n",
+      "[]\n",
+      "[]\n",
+      "[]\n",
+      "[]\n",
+      "[]\n",
+      "['exited abnormally']\n",
+      "[]\n",
+      "['session opened for user news by (uid=0)']\n",
+      "[]\n",
+      "[]\n",
+      "[]\n",
+      "[]\n",
+      "[]\n",
+      "[]\n",
+      "[]\n",
+      "['sshd(pam_unix)[23397]: authentication failure']\n",
+      "[]\n",
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Loop through the list returned.\n",
+    "for line in contents:\n",
+    "\n",
+    "    for eachKeyword in keywords:\n",
+    "\n",
+    "        # Add option to look for keyword, print.\n",
+    "        #if eachKeyword in line:\n",
+    "        x = re.findall(r''+eachKeyword+'', line)\n",
+    "\n",
+    "        print(x)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [
-    "#Open a file\n",
-    "with open(../../logs/smallSyslog.log) as f:"
-   ],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
