--- a/Week01/class/console.ipynb
+++ b/Week01/class/console.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 40,
    "outputs": [
     {
      "data": {
-      "text/plain": "<module 'syslogFTPConnect' from 'C:\\\\Users\\\\trini\\\\PycharmProjects\\\\SYS-320\\\\Week01\\\\class\\\\syslogFTPConnect.py'>"
+      "text/plain": "<module 'syslogSSHSuccess' from 'C:\\\\Users\\\\trini\\\\PycharmProjects\\\\SYS-320\\\\Week01\\\\class\\\\syslogSSHSuccess.py'>"
      },
-     "execution_count": 32,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -17,10 +17,12 @@
     "import syslogSSH\n",
     "import syslogFTPConnect\n",
     "import syslogSU\n",
+    "import syslogSSHSuccess\n",
     "import importlib\n",
     "importlib.reload(syslogSSH)\n",
     "importlib.reload(syslogSU)\n",
-    "importlib.reload(syslogFTPConnect)"
+    "importlib.reload(syslogFTPConnect)\n",
+    "importlib.reload(syslogSSHSuccess)"
    ],
    "metadata": {
     "collapsed": false,
@@ -49,19 +51,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 36,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "rhost=65.166.159.14\n",
+      "rhost=211.115.206.155\n",
+      "rhost=61-220-159-99.hinet-ip.hinet.net\n",
+      "rhost=troi.bluesky-technologies.com\n",
+      "rhost=210.76.59.29\n",
+      "rhost=195.129.24.210\n",
+      "rhost=150.183.249.110\n",
+      "rhost=218.188.2.4\n",
+      "rhost=82.77.200.128\n",
+      "rhost=218.16.122.48\n",
+      "rhost=60.30.224.116\n",
+      "rhost=68.143.156.89.nw.nuvox.net\n",
+      "rhost=203.251.225.101\n",
+      "rhost=zummit.com\n",
+      "rhost=061092085098.ctinets.com\n",
+      "rhost=218.55.234.102\n",
+      "rhost=202.181.236.180\n",
+      "rhost=61.53.154.93\n",
+      "rhost=220.117.241.87\n",
+      "rhost=c9063558.virtua.com.br\n",
+      "rhost=ip-216-69-169-168.ip.secureserver.net\n",
+      "rhost=202-132-40-29.adsl.ttn.net\n",
       "rhost=220-135-151-1.hinet-ip.hinet.net\n",
-      "rhost=218.188.2.4\n"
+      "rhost=210.229.150.228\n",
+      "rhost=212.0.132.20\n",
+      "rhost=211.46.224.253\n",
+      "rhost=200.60.37.201\n",
+      "rhost=211-76-104-65.ebix.net.tw\n",
+      "rhost=209.152.168.249\n",
+      "rhost=h64-187-1-131.gtconnect.net\n",
+      "rhost=211.137.205.253\n",
+      "rhost=biblioteka.wsi.edu.pl\n",
+      "rhost=n219076184117.netvigator.com\n",
+      "rhost=211.9.58.217\n",
+      "rhost=85.44.47.166\n",
+      "rhost=218.22.3.51\n",
+      "rhost=csnsu.nsuok.edu\n",
+      "rhost=c51471f2c.cable.wanadoo.nl\n",
+      "rhost=p15105218.pureserver.info\n",
+      "rhost=211.214.161.141\n",
+      "rhost=adsl-70-242-75-179.dsl.ksc2mo.swbell.net\n",
+      "rhost=62-192-102-94.dsl.easynet.nl\n",
+      "rhost=207.243.167.114\n",
+      "rhost=217.60.212.66\n",
+      "rhost=massive.merukuru.org\n",
+      "rhost=193.110.106.11\n",
+      "rhost=d211-116-254-214.rev.krline.net\n"
      ]
     }
    ],
    "source": [
-    "syslogSSH.ssh_fail('../../logs/smallSyslog.log', ['sshd\\(pam_unix\\).*authentication failure.*'])"
+    "syslogSSH.ssh_fail('../../logs/Linux_2k.log', ['sshd\\(pam_unix\\).*authentication failure.*'])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### SSH Authentication Success Users"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test\n"
+     ]
+    }
+   ],
+   "source": [
+    "syslogSSHSuccess.ssh_success('../../logs/Linux_2k.log',  ['sshd\\(pam_unix\\).*session opened for user.*'])"
    ],
    "metadata": {
     "collapsed": false,
@@ -76,15 +157,12 @@
     "### SU Open"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 37,
    "outputs": [
     {
      "name": "stdout",
@@ -96,7 +174,7 @@
     }
    ],
    "source": [
-    "syslogSU.su_open('../../logs/smallSyslog.log', ['su\\(pam_unix\\).*session opened for user.*'])"
+    "syslogSU.su_open('../../logs/Linux_2k.log', ['su\\(pam_unix\\).*session opened for user.*'])"
    ],
    "metadata": {
     "collapsed": false,
@@ -119,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 38,
    "outputs": [
     {
      "name": "stdout",
@@ -178,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "outputs": [],
    "source": [],
    "metadata": {
