--- a/Week01/homework/console.ipynb
+++ b/Week01/homework/console.ipynb
@@ -24,13 +24,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 67,
    "outputs": [
     {
      "data": {
       "text/plain": "<module 'syslogSSHSuccess' from 'C:\\\\Users\\\\trini\\\\PycharmProjects\\\\SYS-320\\\\Week01\\\\homework\\\\syslogSSHSuccess.py'>"
      },
-     "execution_count": 60,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,10 +69,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 68,
    "outputs": [],
    "source": [
     "logfile = '../../logs/Linux_2K.log'"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Klogind Failure Domains (Homework Question 1)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "163.27.187.39\n"
+     ]
+    }
+   ],
+   "source": [
+    "syslogKlogind.klog_fail(logfile, ['klogind.*Authentication failed.*'])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### SSH Authentication Success Users (HW Question 2)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test\n"
+     ]
+    }
+   ],
+   "source": [
+    "syslogSSHSuccess.ssh_success(logfile,  ['sshd\\(pam_unix\\).*session opened for user.*'])"
    ],
    "metadata": {
     "collapsed": false,
@@ -92,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 71,
    "outputs": [
     {
      "name": "stdout",
@@ -161,40 +223,6 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### SSH Authentication Success Users"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "test\n"
-     ]
-    }
-   ],
-   "source": [
-    "syslogSSHSuccess.ssh_success(logfile,  ['sshd\\(pam_unix\\).*session opened for user.*'])"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
     "### SU Open"
    ],
    "metadata": {
@@ -203,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 72,
    "outputs": [
     {
      "name": "stdout",
@@ -230,15 +258,12 @@
     "### FTP Connections"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 73,
    "outputs": [
     {
      "name": "stdout",
@@ -287,40 +312,6 @@
    ],
    "source": [
     "syslogFTPConnect.ftp_connect(logfile, ['ftpd.*connection from.*'])"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "### Klogind Failure Domains"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "163.27.187.39\n"
-     ]
-    }
-   ],
-   "source": [
-    "syslogKlogind.klog_fail(logfile, ['klogind.*Authentication failed.*'])"
    ],
    "metadata": {
     "collapsed": false,
