--- a/Week01/class/console.ipynb
+++ b/Week01/class/console.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "source": [
     "# Review system Logs (Week 1 Classwork\n",
-    "## Examples are set to use smallSyslog.log, so some of the video functions created with Linux_2k.log show no results."
+    "## Examples are set to use smallSyslog.log, so some of the video functions created with Linux_2k.log show no results.\n",
+    "### Code by Sam Johnson"
    ],
    "metadata": {
     "collapsed": false
