--- a/Week01/homework/console.ipynb
+++ b/Week01/homework/console.ipynb
@@ -319,6 +319,39 @@
      "name": "#%%\n"
     }
    }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Homework Questions"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### What is your interpretation of the users that authenticated to SSH based on the usernames?  The context is that you are a security analyst and checking your log files for anomalies.\n",
+    "My interpretation of the user account that authenticated with SSHD is that somebody has created a dummy account in order to test the availability and security of the SSHD client running in my enviroment. Because the username does not follow any naming convention, I have to assume that the account was not made during the course of normal work. I would first check with the Sysadmin team to verify if they could account for the account creation, and if they could not account for it, I would proceed in tracking down the account.\n",
+    "\n",
+    "### What did you like the most and least about the lab?\n",
+    "I enjoyed using Jupyter once I got the hang of how to use it. Being able to run and test code in segments is really enjoyable as a programmer. The aspect of the lab I liked the least was the fact that I spent a good amount of time ironing out an issue between Jupyter and Pycharm. Once that was resolved, however, I did not have many issues.\n",
+    "\n",
+    "### What additional questions do you have?\n",
+    "I noticed that the account referenced in the homework description, \"ddunston\", does not appear in the dataset. Is this because of an older version of the dataset existing when the homework entry was made? Do you like this format of answering the questions, by having them in markdown in the homework Jupyter file? Is there any way I could make my code better or more to your liking? Any advice is appreciated.\n",
+    "\n",
+    "SJ"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
   }
  ],
  "metadata": {
