--- a/Week01/homework/console.ipynb
+++ b/Week01/homework/console.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Review system Logs (Week 1 Homework\n",
+    "# Review system Logs (Week 1 Homework)\n",
     "## Code by Sam Johnson"
    ],
    "metadata": {
