--- a/Week02/class/console.ipynb
+++ b/Week02/class/console.ipynb
@@ -24,13 +24,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "outputs": [
     {
      "data": {
       "text/plain": "<module 'apacheLog' from 'C:\\\\Users\\\\trini\\\\PycharmProjects\\\\SYS-320\\\\Week02\\\\class\\\\apacheLog.py'>"
      },
-     "execution_count": 21,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -61,14 +61,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "GET /mediawiki/index.php?title=Main_Page 404\n",
-      "GET /wordpress/wp-login.php 404\n"
+      "404 GET /mediawiki/index.php?title=Main_Page\n",
+      "404 GET /wordpress/wp-login.php\n"
      ]
     }
    ],
@@ -84,9 +84,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "outputs": [],
-   "source": [],
+   "execution_count": 27,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "404 GET /cgi-bin/htsearch?Exclude=%60/etc/passwd%60\n",
+      "404 GET /cgi-bin/test-cgi\n",
+      "404 POST /cgi-bin/test-cgi\n"
+     ]
+    }
+   ],
+   "source": [
+    "apacheLog.apache_event('../../logs/access.log', 'apache', 'cgi')"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
