--- a/Week02/homework/Apache_Proxy_Log_Events.ipynb
+++ b/Week02/homework/Apache_Proxy_Log_Events.ipynb
@@ -24,13 +24,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 37,
    "outputs": [
     {
      "data": {
       "text/plain": "<module 'apacheLog' from 'C:\\\\Users\\\\trini\\\\PycharmProjects\\\\SYS-320\\\\Week02\\\\homework\\\\apacheLog.py'>"
      },
-     "execution_count": 11,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -61,39 +61,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 38,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "QQ.exe tcpconn3.tencent.com:80 0 0\n",
       "QQ.exe tcpconn6.tencent.com:443 0 0\n",
-      "QQ.exe cgi.qqweb.qq.com:80 through HTTPS\n",
+      "QQ.exe tcpconn.tencent.com:80 133 0\n",
       "QQ.exe tcpconn6.tencent.com:80 0 0\n",
       "QQProtectUpd.exe qdun-data.qq.com:443 261 70\n",
-      "QQ.exe showxml.qq.com:80 600 1716\n",
       "QQ.exe cgi.qqweb.qq.com:80 477 448\n",
-      "QQ.exe 2052.flash2-http.qq.com:80 466 125682\n",
-      "QQ.exe tcpconn3.tencent.com:443 through HTTPS\n",
-      "QQ.exe tcpconn6.tencent.com:80 through HTTPS\n",
-      "QQ.exe tcpconn.tencent.com:80 through HTTPS\n",
-      "QQ.exe 183.60.49.182:443 through HTTPS\n",
-      "QQ.exe tcpconn6.tencent.com:443 : request\n",
-      "QQExternal.exe proxy.cse.cuhk.edu.hk:5070 1644 KB)\n",
-      "QQ.exe tcpconn4.tencent.com:80 : connect\n",
-      "QQPlayer.exe btrace.qq.com:80 through HTTPS\n",
-      "QQProtectUpd.exe qdun-data.qq.com:443 through HTTPS\n",
-      "QQ.exe tcpconn6.tencent.com:443 through HTTPS\n",
-      "QQ.exe tcpconn3.tencent.com:80 0 0\n",
-      "QQ.exe tcpconn.tencent.com:80 133 0\n",
-      "QQProtectUpd.exe qd-update.qq.com:8080 : connect\n",
-      "QQ.exe qqmail.tencent.com:80 336 2854\n",
       "QQ.exe tcpconn3.tencent.com:443 149 121\n"
      ]
     }
    ],
    "source": [
-    "apacheLog.apache_event('../../logs/Proxifier_2k.log', 'proxy', 'qq')"
+    "apacheLog.apache_remote('../../logs/Proxifier_2k.log', 'proxy', 'remote')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "QQ.exe cgi.qqweb.qq.com:80 proxy.cse.cuhk.edu.hk:5070\n",
+      "QQ.exe tcpconn6.tencent.com:80 proxy.cse.cuhk.edu.hk:5070\n",
+      "QQ.exe tcpconn3.tencent.com:443 proxy.cse.cuhk.edu.hk:5070\n",
+      "QQ.exe 183.60.49.182:443 proxy.cse.cuhk.edu.hk:5070\n",
+      "QQProtectUpd.exe qdun-data.qq.com:443 proxy.cse.cuhk.edu.hk:5070\n",
+      "QQPlayer.exe btrace.qq.com:80 proxy.cse.cuhk.edu.hk:5070\n",
+      "QQ.exe tcpconn.tencent.com:80 proxy.cse.cuhk.edu.hk:5070\n",
+      "QQ.exe tcpconn6.tencent.com:443 proxy.cse.cuhk.edu.hk:5070\n"
+     ]
+    }
+   ],
+   "source": [
+    "apacheLog.apache_proxy('../../logs/Proxifier_2k.log', 'proxy', 'proxy')"
    ],
    "metadata": {
     "collapsed": false,
