--- a/Week02/homework/Apache_Proxy_Log_Events.ipynb
+++ b/Week02/homework/Apache_Proxy_Log_Events.ipynb
@@ -24,13 +24,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 43,
    "outputs": [
     {
      "data": {
       "text/plain": "<module 'apacheLog' from 'C:\\\\Users\\\\trini\\\\PycharmProjects\\\\SYS-320\\\\Week02\\\\homework\\\\apacheLog.py'>"
      },
-     "execution_count": 37,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -61,19 +61,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 44,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "QQ.exe tcpconn3.tencent.com:80 0 0\n",
-      "QQ.exe tcpconn6.tencent.com:443 0 0\n",
-      "QQ.exe tcpconn.tencent.com:80 133 0\n",
-      "QQ.exe tcpconn6.tencent.com:80 0 0\n",
-      "QQProtectUpd.exe qdun-data.qq.com:443 261 70\n",
-      "QQ.exe cgi.qqweb.qq.com:80 477 448\n",
-      "QQ.exe tcpconn3.tencent.com:443 149 121\n"
+      "QQ.exe   tcpconn3.tencent.com:80   0   0\n",
+      "QQ.exe   tcpconn6.tencent.com:80   0   0\n",
+      "QQ.exe   tcpconn3.tencent.com:443   149   121\n",
+      "QQ.exe   tcpconn6.tencent.com:443   0   0\n",
+      "QQ.exe   cgi.qqweb.qq.com:80   477   448\n",
+      "QQ.exe   tcpconn.tencent.com:80   133   0\n",
+      "QQProtectUpd.exe   qdun-data.qq.com:443   261   70\n"
      ]
     }
    ],
@@ -89,20 +89,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 45,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "QQ.exe cgi.qqweb.qq.com:80 proxy.cse.cuhk.edu.hk:5070\n",
-      "QQ.exe tcpconn6.tencent.com:80 proxy.cse.cuhk.edu.hk:5070\n",
-      "QQ.exe tcpconn3.tencent.com:443 proxy.cse.cuhk.edu.hk:5070\n",
-      "QQ.exe 183.60.49.182:443 proxy.cse.cuhk.edu.hk:5070\n",
-      "QQProtectUpd.exe qdun-data.qq.com:443 proxy.cse.cuhk.edu.hk:5070\n",
-      "QQPlayer.exe btrace.qq.com:80 proxy.cse.cuhk.edu.hk:5070\n",
-      "QQ.exe tcpconn.tencent.com:80 proxy.cse.cuhk.edu.hk:5070\n",
-      "QQ.exe tcpconn6.tencent.com:443 proxy.cse.cuhk.edu.hk:5070\n"
+      "QQProtectUpd.exe   qdun-data.qq.com:443   proxy.cse.cuhk.edu.hk:5070\n",
+      "QQ.exe   tcpconn6.tencent.com:443   proxy.cse.cuhk.edu.hk:5070\n",
+      "QQ.exe   cgi.qqweb.qq.com:80   proxy.cse.cuhk.edu.hk:5070\n",
+      "QQ.exe   tcpconn.tencent.com:80   proxy.cse.cuhk.edu.hk:5070\n",
+      "QQ.exe   183.60.49.182:443   proxy.cse.cuhk.edu.hk:5070\n",
+      "QQ.exe   tcpconn6.tencent.com:80   proxy.cse.cuhk.edu.hk:5070\n",
+      "QQ.exe   tcpconn3.tencent.com:443   proxy.cse.cuhk.edu.hk:5070\n",
+      "QQPlayer.exe   btrace.qq.com:80   proxy.cse.cuhk.edu.hk:5070\n"
      ]
     }
    ],
