--- a/Week02/homework/Apache_Proxy_Log_Events.ipynb
+++ b/Week02/homework/Apache_Proxy_Log_Events.ipynb
@@ -24,13 +24,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 50,
    "outputs": [
     {
      "data": {
       "text/plain": "<module 'apacheLog' from 'C:\\\\Users\\\\trini\\\\PycharmProjects\\\\SYS-320\\\\Week02\\\\homework\\\\apacheLog.py'>"
      },
-     "execution_count": 43,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 51,
    "outputs": [
     {
      "name": "stdout",
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 52,
    "outputs": [
     {
      "name": "stdout",
@@ -113,6 +113,24 @@
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Homework Questions\n",
+    "### What is your interpretation of the results that you discovered (Did the files match known threat intell information?  Was there activity to and from the same remote host?)\n",
+    "My interpretation of this data is that there is certainly some kind of attack/probe happening in the environment based off of the presence of QQ file prefixes doing actions such as opening proxy sessions and sending and receiving data from our hosts. In the found logs, there were multiple references to proxies and data transfers from multiple hosts associated with the tencent.com domain.  From this information we can deduce that this domain contains an attacking entity or at least is being used to stage an attack.\n",
+    "### What did you like the most and least about this assignment? NOTE: These help me understand how to improve on assignments and know what is working.\n",
+    "I liked this assignment in terms of showcasing how modular our code can be to fight different attacks. There was not anything of note that I disliked about this assignment.\n",
+    "### What additional questions do you have about this week's material?\n",
+    "No additional questions."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
     }
    }
   }
