--- a/Week06/homework/Week 6 HW.ipynb
+++ b/Week06/homework/Week 6 HW.ipynb
@@ -71,6 +71,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "### Task 2 Commands for next week\n",
+    "commands = {'Blind Files':['cat /etc/resolv.conf', 'cat /etc/motd', 'cat /etc/issue', 'cat /etc/passwd', 'cat /etc/shadow'],'System':['uname -a', 'ps aux', 'top -n 1 -d', 'id', 'arch, uname -m'],'Networking':['hostname -f', 'ip addr show', 'ip ro show', 'ipconfig -a', 'route -n'],'User accounts':['cat /etc/security/passwd', 'cat /etc/groups/', 'getent passwd', 'getend group', 'pdbedit -L -w'],'Obtain users information':['ls -alh /home/*/','ls -alh /home/*/.ssh/','cat /home/*/.ssh/authorized_keys','cat /home/*/.ssh/known_hosts','cat /home/*/.hist'],'Credentials':['cat /home/*/.ssh/id*','cat /tmp/krb5cc_*','cat /tmp/krb5.keytab','cat /home/*/.gnupg/secring.gpgs'],'Configs':['ls -aRl /etc/ * awk \"$1 ~ /w.$/\" * grep -v lrwx 2>/dev/nullte','cat /etc/issue{,.net}','cat /etc/master.passwd','cat /etc/group','cat /etc/hosts'],'Determine Distro':['uname -a','/etc/os-release','/etc/issue','cat /etc/*release','/etc/debian_release'],'Installed Packages':['dpkg -l','dpkg -l | grep -i “linux-image”','dpkg --get-selections','yum list | grep installed'],'Package Sources':['cat /etc/apt/sources.list','ls -l /etc/yum.repos.d/','cat /etc/yum.conf'],'Finding Important Files':['ls -dlR */','ls -alR | grep ^d','find /var -type d','ls -dl `find /var -type d`','ls -dl `find /var -type d` | grep -v root'],}\n",
+    "\n",
+    "for type in commands:\n",
+    "    print(type)\n",
+    "    for option in commands[type]:\n",
+    "        print(option)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": true
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": 37,
    "outputs": [],
    "source": [
