--- a/Week06/homework/Week 6 HW.ipynb
+++ b/Week06/homework/Week 6 HW.ipynb
@@ -134,6 +134,34 @@
      "name": "#%%\n"
     }
    }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Reflection\n",
+    "### What did you like the most and least about this assignment?\n",
+    "Getting Paramiko to work right was a bit of a hassle, but other than that there wasn't really an issue.\n",
+    "### What additional questions do you have?\n",
+    "None."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
