--- a/Week07/homework/Week 7 TH.ipynb
+++ b/Week07/homework/Week 7 TH.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 171,
    "outputs": [],
    "source": [
     "import sys\n",
@@ -22,7 +22,8 @@
     "import paramiko\n",
     "from getpass import getpass\n",
     "from os.path import exists\n",
-    "import os\n",
+    "import os, re\n",
+    "from stat import S_ISDIR\n",
     "\n",
     "# Check to see if output file exists. If file exists, ask user if they want to delete it.\n",
     "if exists('results.body') is True:\n",
@@ -70,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 96,
    "outputs": [
     {
      "name": "stdout",
@@ -82,17 +83,19 @@
       "\u001B[36mINFO\u001B[0m[0000] Loading Yara rules...                        \n",
       "\u001B[36mINFO\u001B[0m[0000] Scanning running processes...                \n",
       "\u001B[33mWARN\u001B[0m[0004] DETECTION! Malicious process detected as foundGoBinary  \u001B[33mpid\u001B[0m=3138 \u001B[33mprocess\u001B[0m=ls\n",
-      "\u001B[33mWARN\u001B[0m[0004] DETECTION! Malicious process detected as foundGoBinary  \u001B[33mpid\u001B[0m=25680 \u001B[33mprocess\u001B[0m=snapd\n",
-      "\u001B[36mINFO\u001B[0m[0014] Scanning autoruns...                         \n",
-      "\u001B[33mWARN\u001B[0m[0015] DETECTION! Malicious autorun detected as foundGoBinary  \u001B[33mimage_path\u001B[0m=/usr/bin/snap \u001B[33mtype\u001B[0m=systemd\n",
-      "\u001B[33mWARN\u001B[0m[0015] DETECTION! Malicious autorun detected as foundGoBinary  \u001B[33mimage_path\u001B[0m=/usr/bin/snap \u001B[33mtype\u001B[0m=systemd\n",
-      "\u001B[36mINFO\u001B[0m[0016] Scanning the filesystem (this can take several minutes)... \n",
-      "\u001B[31mERRO\u001B[0m[0016] Some malicious artifacts have been detected on this system: \n",
-      "\u001B[31mERRO\u001B[0m[0016] Found detection for foundGoBinary            \n",
-      "\u001B[31mERRO\u001B[0m[0016] Found detection for foundGoBinary            \n",
-      "\u001B[31mERRO\u001B[0m[0016] Found detection for foundGoBinary            \n",
-      "\u001B[31mERRO\u001B[0m[0016] Found detection for foundGoBinary            \n",
-      "\n"
+      "\u001B[33mWARN\u001B[0m[0005] DETECTION! Malicious process detected as foundGoBinary  \u001B[33mpid\u001B[0m=25680 \u001B[33mprocess\u001B[0m=snapd\n",
+      "\u001B[36mINFO\u001B[0m[0018] Scanning autoruns...                         \n",
+      "\u001B[33mWARN\u001B[0m[0019] DETECTION! Malicious autorun detected as foundGoBinary  \u001B[33mimage_path\u001B[0m=/usr/bin/snap \u001B[33mtype\u001B[0m=systemd\n",
+      "\u001B[33mWARN\u001B[0m[0019] DETECTION! Malicious autorun detected as foundGoBinary  \u001B[33mimage_path\u001B[0m=/usr/bin/snap \u001B[33mtype\u001B[0m=systemd\n",
+      "\u001B[36mINFO\u001B[0m[0020] Scanning the filesystem (this can take several minutes)... \n",
+      "\u001B[31mERRO\u001B[0m[0020] Some malicious artifacts have been detected on this system: \n",
+      "\u001B[31mERRO\u001B[0m[0020] Found detection for foundGoBinary            \n",
+      "\u001B[31mERRO\u001B[0m[0020] Found detection for foundGoBinary            \n",
+      "\u001B[31mERRO\u001B[0m[0020] Found detection for foundGoBinary            \n",
+      "\u001B[31mERRO\u001B[0m[0020] Found detection for foundGoBinary            \n",
+      "\n",
+      "Suspicious PIDs: 3138 \n",
+      "Suspicious PIDs: 25680 \n"
      ]
     }
    ],
@@ -114,17 +117,18 @@
     "    # Get the output from the command\n",
     "    stdin, stout, stderr = ssh.exec_command(eachCMD)\n",
     "\n",
+    "    # Inputs sudo password\n",
     "    stdin.write(thePass + \"\\n\")\n",
     "    # Get results from output\n",
     "    lines = stout.readlines()\n",
-    "\n",
     "    # Convert the list to a string.\n",
     "    output = ''.join(lines)\n",
+    "    search = '=[0-9]{3,} '\n",
+    "    cmd_output = re.findall(r'' + search + '', output)\n",
     "\n",
-    "    cmd_output = output\n",
-    "\n",
-    "    print(cmd_output)\n",
-    "\n",
+    "    print(output)\n",
+    "    for pid in cmd_output:\n",
+    "        print(\"Suspicious PIDs: \" + pid.replace(\"=\",\"\"))\n",
     "\n",
     "sftp.close()"
    ],
@@ -138,7 +142,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Run LSOF Against suspicious PIDs"
+    "## Run LSOF Against suspicious PIDs and download relevant files"
    ],
    "metadata": {
     "collapsed": false,
@@ -149,44 +153,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 117,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "COMMAND  PID     USER   FD      TYPE DEVICE SIZE/OFF   NODE NAME\n",
-      "\n",
-      "ls      3138 p.dalton  cwd       DIR    8,1     4096 258130 /home/p.dalton/test-lk\n",
-      "\n",
-      "ls      3138 p.dalton  rtd       DIR    8,1     4096      2 /\n",
-      "\n",
-      "ls      3138 p.dalton  txt       REG    8,1  6597697 258133 /usr/local/bin/ls\n",
-      "\n",
-      "ls      3138 p.dalton  DEL       REG    8,1            3453 /usr/lib/x86_64-linux-gnu/libc-2.31.so\n",
-      "\n",
-      "ls      3138 p.dalton  DEL       REG    8,1            3466 /usr/lib/x86_64-linux-gnu/libpthread-2.31.so\n",
-      "\n",
-      "ls      3138 p.dalton  DEL       REG    8,1            3449 /usr/lib/x86_64-linux-gnu/ld-2.31.so\n",
-      "\n",
-      "ls      3138 p.dalton    0r      CHR    1,3      0t0      6 /dev/null\n",
-      "\n",
-      "ls      3138 p.dalton    1w      REG    8,1       85 258135 /home/p.dalton/test-lk/.d.log\n",
-      "\n",
-      "ls      3138 p.dalton    2w      REG    8,1       85 258135 /home/p.dalton/test-lk/.d.log\n",
-      "\n",
-      "ls      3138 p.dalton    3r      CHR    1,3      0t0      6 /dev/null\n",
-      "\n",
-      "ls      3138 p.dalton    4u      REG    8,1        4 258134 /home/p.dalton/test-lk/d.pid\n",
-      "\n",
-      "ls      3138 p.dalton    5u     IPv6  33422      0t0    TCP *:http-alt (LISTEN)\n",
-      "\n",
-      "ls      3138 p.dalton    7u  a_inode   0,14        0  10376 [eventpoll]\n",
-      "\n",
-      "ls      3138 p.dalton    8r     FIFO   0,13      0t0  33424 pipe\n",
-      "\n",
-      "ls      3138 p.dalton    9w     FIFO   0,13      0t0  33424 pipe\n",
-      "\n"
+      "Found Found!\n"
      ]
     }
    ],
@@ -201,11 +174,222 @@
     "    stdin.write(thePass + \"\\n\")\n",
     "    # Get results from output\n",
     "    lines = stout.readlines()\n",
-    "    for line in lines:\n",
-    "        print(line)\n",
+    "    search = 'REG.*'\n",
     "    # Convert the list to a string.\n",
     "    output = ''.join(lines)\n",
-    "    cmd_output = output"
+    "    cmd_output = re.findall(r'' + search + '', output)\n",
+    "    files = []\n",
+    "    for output in cmd_output:\n",
+    "        search = '/.*'\n",
+    "        file = re.findall(r'' + search + '', output)\n",
+    "        for line in file:\n",
+    "            files.append(line)\n",
+    "\n",
+    "    # Create a folder to place the artifacts\n",
+    "    newfol = \"Artifacts/\" + val\n",
+    "    if exists(newfol) is True:\n",
+    "        print('Found Found!')\n",
+    "    else:\n",
+    "        os.mkdir(newfol)\n",
+    "\n",
+    "    sftp = ssh.open_sftp()\n",
+    "    # Loop through the files and download them.\n",
+    "    for eachFile in files:\n",
+    "\n",
+    "        # Create a list from the filename\n",
+    "        x = eachFile.split(\"/\")\n",
+    "\n",
+    "        # -1 is used to pluck last element out.\n",
+    "        filename = x[-1]\n",
+    "\n",
+    "        # Local path to store files\n",
+    "        local_path = newfol + '/' + filename\n",
+    "\n",
+    "        sftp.get(eachFile, local_path)\n",
+    "\n",
+    "    sftp.close()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Perform File/Folder Checks for User Data"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found Found!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Input files to be checked\n",
+    "check = ['/etc/passwd', '/var/log/auth.log']\n",
+    "# List to add Targeted Users\n",
+    "search = [\".*p.dalton.*\"]\n",
+    "for target in search:\n",
+    "    newfol = \"Artifacts/\" + target.replace(\".*\", \"\")\n",
+    "    if exists(newfol) is True:\n",
+    "        print('Found Found!')\n",
+    "    else:\n",
+    "        os.mkdir(newfol)\n",
+    "    # List for commands to be added\n",
+    "    cmds = []\n",
+    "\n",
+    "    for cmd in check:\n",
+    "        command = \"sudo -S cat \" + cmd\n",
+    "        cmds.append(command)\n",
+    "\n",
+    "    for eachCMD in cmds:\n",
+    "        # Get the output from the command\n",
+    "        stdin, stout, stderr = ssh.exec_command(eachCMD)\n",
+    "\n",
+    "        stdin.write(thePass + \"\\n\")\n",
+    "        # Get results from output\n",
+    "        lines = stout.readlines()\n",
+    "\n",
+    "        # Convert the list to a string.\n",
+    "        output = ''.join(lines)\n",
+    "\n",
+    "        # Search for values\n",
+    "\n",
+    "        cmd_output = re.findall(r'' + target + '', output)\n",
+    "\n",
+    "        # Save to file\n",
+    "        file = newfol + \"/results.txt\"\n",
+    "        for output in cmd_output:\n",
+    "            with open(file, 'a') as f:\n",
+    "                f.write(output + \"\\n\")\n",
+    "\n",
+    "\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Dump Target Home Dir Contents"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 167,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/p.dalton:\n",
+      ".bash_history  .cache  .d.log  aqwerpuqwerj  test-lk\n",
+      "\n",
+      "/home/p.dalton/.cache:\n",
+      "motd.legal-displayed\n",
+      "\n",
+      "/home/p.dalton/test-lk:\n",
+      ".d.log\td.pid\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "cmd = \"sudo -S dir -A -R /home/p.dalton\"\n",
+    "stdin, stout, stderr = ssh.exec_command(cmd)\n",
+    "\n",
+    "stdin.write(thePass + \"\\n\")\n",
+    "# Get results from output\n",
+    "lines = stout.readlines()\n",
+    "\n",
+    "# Convert the list to a string.\n",
+    "output = ''.join(lines)\n",
+    "print(output)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Download Contents"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 179,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found Found!\n"
+     ]
+    }
+   ],
+   "source": [
+    "search = \"p.dalton\"\n",
+    "file_list = ['/home/p.dalton/.d.log','/home/p.dalton/aqwerpuqwerj','/home/p.dalton/test-lk/.d.log','/home/p.dalton/test-lk/d.pid']\n",
+    "newfol = \"Artifacts/\"+search\n",
+    "if exists(newfol) is True:\n",
+    "    print('Found Found!')\n",
+    "else:\n",
+    "    os.mkdir(newfol)\n",
+    "\n",
+    "sftp = ssh.open_sftp()\n",
+    "\n",
+    "# Loop through the files and download them.\n",
+    "for eachFile in file_list:\n",
+    "\n",
+    "    # Create a list from the filename\n",
+    "    x = eachFile.split(\"/\")\n",
+    "\n",
+    "    # -1 is used to pluck last element out.\n",
+    "    filename = x[-1]\n",
+    "\n",
+    "    # Local path to store files\n",
+    "    local_path = newfol + '/' + filename\n",
+    "\n",
+    "    sftp.get(eachFile, local_path)\n",
+    "\n",
+    "sftp.close()"
    ],
    "metadata": {
     "collapsed": false,
